substrate/frame/support/test/tests/pallet_ui/trait_constant_invalid_bound_lifetime.stderr
error[E0405]: cannot find trait `Get` in this scope
  --> tests/pallet_ui/trait_constant_invalid_bound_lifetime.rs:26:11
   |
26 |         type U: Get<'static>;
   |                 ^^^ not found in this scope
   |
help: consider importing one of these traits
   |
20 +     use frame_support::pallet_prelude::Get;
   |
20 +     use sp_core::Get;
   |
20 +     use sp_runtime::traits::Get;
   |
